[workspace]
members = ["crates/tokenizer"]
default-members = ["crates/tokenizer"]
resolver = "3"

[workspace.package]
version = "0.1.0"
authors = ["Yoo1tic <137816438+Yoo1tic@users.noreply.github.com>"]
edition = "2024"

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["raw_value"] }
serde-wasm-bindgen = "0.6"
thiserror = "2.0"
wasm-bindgen = "0.2"
console_error_panic_hook = "0.1.7"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
